--- a/webapp/src/index.css
+++ b/webapp/src/index.css
@@ -59,6 +59,20 @@ a {
 }
 
 .leaflet-container {
-  width: 50vw;
-  height: 50vh;
+  /* width: 75vw;
+  height: 75vh; */
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 100%;
+  height: 100%;
+  margin-top: 6%;
+}
+
+@media (max-width: 400px) {
+  .leaflet-container {
+    width: 100%;
+    height: 75%;
+  }
 }
