--- a/webapp/src/index.css
+++ b/webapp/src/index.css
@@ -62,17 +62,19 @@ a {
   /* width: 75vw;
   height: 75vh; */
   position: absolute;
-  top: 50%;
+  /* top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%); */
   width: 100%;
   height: 100%;
-  margin-top: 6%;
+
+  top: 0;
+  left: 0;
 }
 
 @media (max-width: 400px) {
   .leaflet-container {
     width: 100%;
-    height: 75%;
+    height: 100%;
   }
 }
