--- a/webapp/src/index.css
+++ b/webapp/src/index.css
@@ -15,10 +15,10 @@ code {
 }
 
 html {
-  font-size: 62.5%;
+  font-size: 15px;
   scroll-behavior: smooth;
 }
-@media only screen and (max-width: 75em) {
+/* @media only screen and (max-width: 75em) {
   html {
     font-size: 59%;
   }
@@ -32,44 +32,49 @@ html {
   html {
     font-size: 65%;
   }
-}
+} */
 *,
 ::after,
 ::before {
   margin: 0;
   padding: 0;
-  box-sizing: inherit;
+  box-sizing: border-box;
   font-family: inherit;
 }
 
-header {
+/* header {
   position: fixed;
   width: 100%;
   z-index: 1000;
   background: #fff;
   box-shadow: 0 10px 100px rgba(0, 0, 0, 0.1);
-}
+} */
 
-li {
+/* li {
   list-style: none;
 }
 
 a {
   text-decoration: none;
-}
+} */
 
-.leaflet-container {
-  /* width: 75vw;
+/* .leaflet-container { */
+/* width: 75vw;
   height: 75vh; */
-  position: absolute;
-  /* top: 50%;
+/* top: 50%;
   left: 50%;
   transform: translate(-50%, -50%); */
+/* position: absolute;
   width: 100%;
   height: 100%;
 
   top: 0;
   left: 0;
+} */
+
+.leaflet-container {
+  width: 100%;
+  /* height: 100%; */
 }
 
 @media (max-width: 400px) {
@@ -77,4 +82,51 @@ a {
     width: 100%;
     height: 100%;
   }
+}
+
+.centered {
+  margin: 3rem auto;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.focused {
+  font-size: 3rem;
+  font-weight: bold;
+  color: white;
+}
+
+.btn {
+  text-decoration: none;
+  background-color: teal;
+  color: white;
+  border-radius: 4px;
+  padding: 0.75rem 1.5rem;
+  border: 1px solid teal;
+  cursor: pointer;
+}
+
+.btn:hover,
+.btn:active {
+  background-color: #11acac;
+  border-color: #11acac;
+}
+
+.btn--flat {
+  cursor: pointer;
+  font: inherit;
+  color: teal;
+  border: none;
+  background-color: none;
+  text-decoration: none;
+  padding: 0.75rem 1.5rem;
+  border-radius: 4px;
+}
+
+.btn--flat:hover,
+.btn--flat:active {
+  background-color: teal;
+  color: white;
 }
