--- a/webapp/src/components/LogInButton.module.css
+++ b/webapp/src/components/LogInButton.module.css
@@ -1,6 +1,6 @@
 .loginButton {
-  padding: 2rem 2rem;
-  margin-top: 1rem;
+  /* padding: 2rem 2rem; */
+  /* margin-top: 1rem; */
   text-transform: uppercase;
   letter-spacing: 1.5px;
   font-size: 1.5rem;
