--- a/webapp/src/index.css
+++ b/webapp/src/index.css
@@ -33,9 +33,9 @@ html {
     font-size: 11px;
   }
 }
-.MuiContainer-root {
+/* .MuiContainer-root {
   padding: 0 !important;
-}
+} */
 
 /* header {
   position: fixed;
@@ -75,8 +75,12 @@ a {
 @media (max-width: 400px) {
   .leaflet-container {
     width: 100%;
-    height: 100%;
+    /* height: 47.5%; */
   }
+}
+
+.MuiPaper-elevation1 {
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px !important;
 }
 
 .centered {
