--- a/webapp/src/components/layout/MainNavigation.module.css
+++ b/webapp/src/components/layout/MainNavigation.module.css
@@ -41,3 +41,27 @@
 .nav a:hover {
   color: rgb(90, 166, 80);
 }
+
+.header_logo {
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+  color: #333;
+  transition: color 0.3s;
+}
+
+.header_logo_image {
+  width: 15rem;
+  height: 15rem;
+  border-radius: 50px;
+  overflow: hidden;
+  margin-right: 1.5rem;
+}
+
+.header_img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
+  display: block;
+}
