--- a/webapp/src/components/layout/MainNavigation.module.css
+++ b/webapp/src/components/layout/MainNavigation.module.css
@@ -1,14 +1,23 @@
+.header_container {
+  display: flex;
+  justify-content: center;
+  margin-top: 15px;
+}
+
 .header {
-  width: 100%;
+  width: 98%;
   height: 8rem;
   display: flex;
+  justify-self: center;
   padding: 0 10%;
   justify-content: space-between;
   align-items: center;
   /* background-color: #008080; */
   background: #fff;
-  box-shadow: 0px 15px 10px -15px #111;
+  /* box-shadow: 0px 15px 10px -15px #111; */
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
   margin-bottom: 10px;
+  border-radius: 0.4rem;
 }
 
 .logo {
@@ -42,6 +51,14 @@
   color: rgb(90, 166, 80);
 }
 
+.logo {
+  display: flex;
+  width: 8rem;
+  height: 8rem;
+  /* justify-content: center; */
+  align-items: center;
+}
+
 .header_logo {
   display: flex;
   align-items: center;
@@ -51,16 +68,23 @@
 }
 
 .header_logo_image {
-  width: 15rem;
-  height: 15rem;
-  border-radius: 50px;
+  /* width: 15rem;
+  height: 15rem; */
+  /* border-radius: 50px; */
+  /* width: 22.5%; */
+  /* height: 5rem; */
+  /* height: 10%; */
   overflow: hidden;
-  margin-right: 1.5rem;
+  /* margin-right: 1.5rem; */
+  /* width: 100%; */
+  /* height: auto; */
 }
 
 .header_img {
+  /* width: 100%;
+  height: 100%; */
   width: 100%;
-  height: 100%;
+  height: auto;
   object-fit: cover;
   object-position: center;
   display: block;
