--- a/webapp/src/components/UI/Header.module.css
+++ b/webapp/src/components/UI/Header.module.css
@@ -30,8 +30,8 @@
 }
 
 .header_img {
-  width: 100%;
-  height: 100%;
+  /* width: 100%;
+  height: 100%; */
   object-fit: cover;
   object-position: center;
   display: block;
