--- a/webapp/src/components/layout/MainNavigation.module.css
+++ b/webapp/src/components/layout/MainNavigation.module.css
@@ -53,7 +53,7 @@
 
 .logo {
   display: flex;
-  width: 8rem;
+  width: 12.5rem;
   height: 8rem;
   /* justify-content: center; */
   align-items: center;
@@ -75,7 +75,10 @@
   /* height: 5rem; */
   /* height: 10%; */
   overflow: hidden;
-  /* margin-right: 1.5rem; */
+  /* height: 100%;
+  width: 100%; */
+
+  margin-right: 1rem;
   /* width: 100%; */
   /* height: auto; */
 }
