--- a/webapp/src/index.css
+++ b/webapp/src/index.css
@@ -68,7 +68,7 @@ a {
 } */
 
 .leaflet-container {
-  width: 100%;
+  width: 97.5%;
   /* height: 100%; */
 }
 
@@ -128,4 +128,101 @@ a {
 .btn--flat:active {
   background-color: teal;
   color: white;
+}
+
+/* PRUEBAS FORM */
+.form-control {
+  margin-bottom: 1rem;
+}
+
+.form-control input,
+.form-control label {
+  display: block;
+}
+
+.form-control label {
+  font-weight: bold;
+  margin-bottom: 0.5rem;
+}
+
+.form-control input,
+.form-control select {
+  font: inherit;
+  padding: 0.5rem;
+  border-radius: 4px;
+  border: 1px solid #ccc;
+  width: 90%;
+  max-width: 100%;
+  margin-bottom: 0.5rem;
+}
+
+.form-control textarea,
+.form-control select {
+  font: inherit;
+  padding: 0.5rem;
+  height: 7.5rem;
+  border-radius: 4px;
+  border: 1px solid #ccc;
+  width: 90%;
+  max-width: 100%;
+  resize: none;
+  margin-bottom: 0.5rem;
+}
+
+.form-control input:focus {
+  outline: none;
+  border-color: #240370;
+  background-color: #e0d4fd;
+}
+
+.form-control textarea:focus {
+  outline: none;
+  border-color: #240370;
+  background-color: #e0d4fd;
+}
+
+.control-group {
+  display: flex;
+  flex-direction: column;
+  column-gap: 1rem;
+  flex-wrap: wrap;
+}
+
+.control-group .form-control {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  flex: 1;
+}
+
+.form-actions {
+  text-align: right;
+}
+
+.form-actions button {
+  margin-left: 1rem;
+}
+
+.invalid input {
+  border: 1px solid #b40e0e;
+  background-color: #fddddd;
+}
+
+.invalid input:focus {
+  border-color: #ff8800;
+  background-color: #fbe8d2;
+}
+
+.invalid textarea {
+  border: 1px solid #b40e0e;
+  background-color: #fddddd;
+}
+
+.invalid textarea:focus {
+  border-color: #ff8800;
+  background-color: #fbe8d2;
+}
+
+.error-text {
+  color: #b40e0e;
 }
