--- a/webapp/src/components/UI/InfoCard.module.css
+++ b/webapp/src/components/UI/InfoCard.module.css
@@ -1,11 +1,11 @@
 .mainContainer {
   display: flex;
   width: 100%;
-  height: 100%;
+  /* height: 80%; */
   position: absolute;
   justify-content: end;
   /* margin-top: 4vw; */
-  min-width: 600px;
+  min-width: 450px;
   right: 20px;
 }
 
