--- a/webapp/src/index.css
+++ b/webapp/src/index.css
@@ -15,7 +15,7 @@ code {
 }
 
 html {
-  font-size: 15px;
+  font-size: 20px;
   scroll-behavior: smooth;
 }
 
@@ -68,7 +68,7 @@ a {
 } */
 
 .leaflet-container {
-  width: 97.5%;
+  width: 100%;
   /* height: 100%; */
 }
 
@@ -138,6 +138,7 @@ a {
 .form-control input,
 .form-control label {
   display: block;
+  font-size: 0.75rem;
 }
 
 .form-control label {
