--- a/webapp/src/components/layout/podsCards/MarkerCard.module.css
+++ b/webapp/src/components/layout/podsCards/MarkerCard.module.css
@@ -35,14 +35,62 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
 }
 
 .commentTextArea {
+  position: relative;
   resize: vertical;
-  width: 90%;
   height: 3.5rem;
   min-height: 2rem;
-  max-height: 12rem;
+  max-height: 8rem;
+  min-width: 12rem;
+}
+
+@media (max-width: 900px) {
+  .commentText {
+    align-items: center;
+    flex-direction: column;
+  }
+  
+  .commentTextArea {
+    position: relative;
+    resize: vertical;
+    height: 3.5rem;
+    min-height: 2rem;
+    max-height: 8rem;
+    min-width: 8rem;
+    width: 8rem;
+  }
+
+}
+
+@media (max-width: 769px) {
+  .commentText {
+    align-items: center;
+    flex-direction: column;
+  }
+  
+  .commentTextArea {
+    position: relative;
+    resize: vertical;
+    width: 15rem;
+    height: 3.5rem;
+    min-height: 2rem;
+    max-height: 8rem;
+    min-width: 8rem;
+  }
+}
+
+@media (min-width:769px){
+  @media(max-width: 990px){
+    .scoreGroup{
+      flex-direction: column;
+    }
+    .rating{
+      padding-left: 2rem;
+    }
+  }
 }
 
 .scoreGroup {
@@ -52,6 +100,47 @@
   align-items: center;
 }
 
+.rating {
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: center;
+  padding-right: 2.1rem;
+}
+
+.rating>input {
+  display: none
+}
+
+.rating>label {
+  position: relative;
+  width: 1em;
+  font-size: 30px;
+  font-weight: 300;
+  color: #FFD600;
+  cursor: pointer
+}
+
+.rating>label::before {
+  content: "\2605";
+  position: absolute;
+  opacity: 0
+}
+
+.rating>label:hover:before,
+.rating>label:hover~label:before {
+  opacity: 1 !important
+}
+
+.rating>input:checked~label:before {
+  opacity: 1
+}
+
+.rating:hover>input:checked~label:before {
+  opacity: 0.4
+}
+
+
 .stars {
   padding-right: 2rem;
 }
+
