--- a/webapp/src/components/UI/NotLoggedText.module.css
+++ b/webapp/src/components/UI/NotLoggedText.module.css
@@ -2,7 +2,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-top: 5rem;
+  /* margin-top: 5rem; */
 }
 
 .notLoggedTextContainer p {
