--- a/webapp/src/components/layout/Layout.module.css
+++ b/webapp/src/components/layout/Layout.module.css
@@ -15,11 +15,11 @@
 	min-height: 50px;
 }
 
-.background {
+/* .background {
 	background-image: url("../../images/wallpaper.jpg");
 	background-size: cover;
 	background-position: center;
-}
+} */
 
 /* @media (max-width: 400px) {
   .header {
